--- a/client/views/explore.css
+++ b/client/views/explore.css
@@ -24,6 +24,7 @@ body {
   flex-direction: column;
   /* justify-content: space-around; */
   padding: 2%;
+  align-items: center;
 }
 .trip {
   width: 50%;
@@ -69,6 +70,7 @@ body {
   justify-content: center;
   flex-direction: column;
   width: 50%;
+  align-items: center;
 }
 .dateContainer {
   width: 50%;
@@ -77,12 +79,14 @@ body {
   flex-direction: column;
   justify-content: space-around;
   /* padding: 2%; */
+  align-items: center;
 }
 .buttonDiv {
   display: flex;
   flex-direction: column;
   justify-content: center;
   width: 50%;
+  align-items: center;
 }
 #formSubmit {
   width: 50%;
@@ -140,4 +144,8 @@ nav a:hover {
   max-width: 180px !important;
   margin: auto;
   margin-top: 5px;
+}
+
+.card-body p {
+  padding-top: 3px;
 }
