--- a/client/views/registerStyles.css
+++ b/client/views/registerStyles.css
@@ -57,3 +57,9 @@ input {
 button {
   opacity: 70%;
 }
+
+h4 {
+  margin-top: 10px;
+  font-family: "Boogaloo", cursive;
+  color: rgb(54, 34, 34);
+}
