--- a/client/views/loginStyles.css
+++ b/client/views/loginStyles.css
@@ -2,13 +2,6 @@ body {
   background-color: rgb(253, 247, 232);
   color: rgb(54, 34, 34);
 }
-.mainContainer {
-  margin-left: 10%;
-  margin-right: 10%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
 
 nav {
   text-decoration: none;
@@ -29,12 +22,13 @@ nav a:hover {
   text-shadow: 2px 2px 4px rgb(57, 8, 85);
 }
 
-.formDiv {
+form {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* margin-left: 30%; */
+  margin-bottom: 100px;
+  margin-left: 180px;
 }
 
 button {
@@ -62,4 +56,10 @@ input {
 }
 #registerLink:hover {
   text-shadow: 2px 2px 4px rgb(57, 8, 85);
+}
+
+h4 {
+  margin-top: 10px;
+  font-family: "Boogaloo", cursive;
+  color: rgb(54, 34, 34);
 }
