--- a/client/views/homeStyles.css
+++ b/client/views/homeStyles.css
@@ -9,7 +9,7 @@ nav {
   padding-top: 25px;
   color: rgb(54, 34, 34);
 }
-nav a {
+a {
   font-family: "Boogaloo", cursive;
   text-decoration: none;
   color: black;
