--- a/client/views/homeStyles.css
+++ b/client/views/homeStyles.css
@@ -35,15 +35,15 @@ nav a:hover {
   height: 100vh;
 }
 
-@media screen and (max-width: 1350px) {
+/* @media screen and (max-width: 1350px) {
   main {
     width: 90%;
     height: 100vh;
     background-size: cover;
   }
-  */ .navbar {
+   .navbar {
     width: 100%;
     background-size: cover;
     height: max-content;
   }
-}
+} */
