--- a/client/views/registerStyles.css
+++ b/client/views/registerStyles.css
@@ -42,6 +42,7 @@ label {
   font-family: "Open Sans", sans-serif;
   color: #5c4d7d;
 }
+
 #loginLink {
   font-family: "Boogaloo", cursive;
   text-decoration: none;
@@ -82,6 +83,8 @@ h4 {
   opacity: 50%;
   max-width: 800px;
   min-width: 600px;
+  min-height: 550px;
+  min-height: 575px;
   align-self: center;
 }
 
