--- a/client/views/loginStyles.css
+++ b/client/views/loginStyles.css
@@ -99,3 +99,29 @@ h4 {
   justify-self: center;
   margin-top: 10%;
 }
+
+@media screen and (max-width: 600px) {
+  main {
+    width: 90%;
+    height: 100vh;
+    background-size: cover;
+  }
+  .navbar {
+    width: 100%;
+    background-size: cover;
+    height: max-content;
+  }
+  .navbar a {
+    font-size: 12px;
+  }
+  .navbar img {
+    width: 90px;
+    height: 40px;
+  }
+  .container-fluid {
+    align-items: right;
+  }
+  #backgroundImage {
+    display: none !important;
+  }
+}
