--- a/client/views/itinerary.css
+++ b/client/views/itinerary.css
@@ -133,3 +133,94 @@ nav {
 .editForm input {
   margin: 5px;
 }
+
+@media screen and (max-width: 600px) {
+  main {
+    width: 90%;
+    height: 100vh;
+    background-size: cover;
+  }
+  .navbar {
+    width: 100%;
+    background-size: cover;
+    height: max-content;
+  }
+  .navbar a {
+    font-size: 12px;
+  }
+  .navbar img {
+    width: 90px;
+    height: 40px;
+  }
+  .container-fluid {
+    align-items: right;
+  }
+  #backgroundImage {
+    display: none !important;
+  }
+
+  h4 {
+    text-align: center;
+  }
+
+  .fullSearch h2 {
+    font-size: 16px;
+    text-align: center;
+  }
+
+  label {
+    text-align: center;
+  }
+
+  .dateContainer {
+    width: 80%;
+  }
+
+  .choiceContainer {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .card-img-top {
+    max-width: 450px !important;
+    min-width: 150px !important;
+    min-height: 150px !important;
+    max-height: 200px !important;
+    width: 70% !important;
+    border-radius: 2px;
+  }
+
+  .card-body {
+    display: flex;
+    flex-direction: column;
+    padding: 2%;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 16px;
+  }
+
+  .parkNames h2 {
+    font-size: 18px;
+    text-align: center;
+  }
+
+  .card button {
+    width: 100% !important;
+    font-size: 12px;
+  }
+
+  p {
+    font-size: 28px;
+  }
+
+  h1 {
+    font-size: 20px;
+  }
+
+  h5 {
+    font-size: 12px;
+  }
+}
