--- a/client/views/homeStyles.css
+++ b/client/views/homeStyles.css
@@ -33,6 +33,7 @@ nav a:hover {
   align-items: center;
   justify-content: center;
   height: 100vh;
+  min-width: 1140px !important;
 }
 
 @media screen and (max-width: 600px) {
